<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_mypage"
                android:icon="@drawable/ic_baseline_account_box_24"
                android:title="@string/menu_mypage" />
            <item
                android:id="@+id/nav_notice"
                android:icon="@drawable/ic_baseline_contact_support_24"
                android:title="@string/menu_notice" />
        </menu>
    </item>

    <item android:title=""
        android:id="@+id/drawer_logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_dark_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

    <item android:title=""
          android:id="@+id/drawer_admin"
        >
        <menu>
            <item
                android:id="@+id/nav_admin_page"
                android:icon="@drawable/ic_baseline_admin_panel_settings_24"
                android:title="@string/menu_admin_page" />
        </menu>
    </item>


</menu>