<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.webproject.food.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mypage"
        android:name="com.webproject.food.main.mypage.MypageFragment"
        android:label="@string/menu_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/nav_notice"
        android:name="com.webproject.food.main.notice.NoticeFragment"
        android:label="@string/menu_notice"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.webproject.food.main.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.webproject.food.main.recipes.RecipesFragment"
        android:label="@string/menu_withdrawal"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_admin_page"
        android:name="com.webproject.food.main.admin.AdminFragment"
        android:label="@string/menu_withdrawal"
        tools:layout="@layout/fragment_recipes" />

</navigation>